[project]
name = "pedestrian-exposure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lewis hicking", email = "lhic778@aucklanduni.ac.nz" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
